--- a/HouseFurniture/Base.lproj/Main.storyboard
+++ b/HouseFurniture/Base.lproj/Main.storyboard
@@ -57,14 +57,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vuK-8P-mNL">
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vuK-8P-mNL">
                                 <rect key="frame" x="20" y="108" width="374" height="374"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vuK-8P-mNL" secondAttribute="height" multiplier="1:1" id="FL8-4e-4Vm"/>
                                 </constraints>
                                 <state key="normal" title="Choose Photo"/>
+                                <state key="selected" title="Choose Photo"/>
                                 <connections>
-                                    <action selector="choosePhotoButtonTapped:" destination="DaZ-Dx-iMD" eventType="touchUpInside" id="Phq-aR-Nic"/>
+                                    <action selector="choosePhotoButtonTapped:" destination="DaZ-Dx-iMD" eventType="touchUpInside" id="3Zn-WV-3Vp"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tek-Sd-dSI">
@@ -82,7 +83,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJt-Sg-fLy">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="JZs-SC-zlW"/>
+                                    <barButtonItem systemItem="action" id="JZs-SC-zlW">
+                                        <connections>
+                                            <action selector="actionButtonTapped:" destination="DaZ-Dx-iMD" id="dNm-Px-Jdf"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -105,7 +110,7 @@
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Rn1-hX-Idr"/>
                     <connections>
-                        <outlet property="choosePhotoButton" destination="vuK-8P-mNL" id="MKJ-Lb-1eO"/>
+                        <outlet property="choosePhotoButton" destination="vuK-8P-mNL" id="eHD-n3-klN"/>
                         <outlet property="furnitureDescriptionLabel" destination="tek-Sd-dSI" id="nRE-Fy-eUz"/>
                         <outlet property="furnitureTitleLabel" destination="lZi-td-9yR" id="jgd-OG-P1H"/>
                     </connections>
